# telemetry-git-hooks

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  Makefile  README.md  buildspec_pr.yml  pyproject.toml
hooks/: check_tool_versions.py
tests/: test_check_tool_version.py
