[tool.poetry]
name = "telemetry-git-hooks"
version = "0.0.0"
description = "Pre-commit checks for Telemetry"
authors = ["Team Telemetry"]
license = "Apache 2.0"

[[tool.poetry.source]]
name = "artifactory"
url = "https://artefacts.tax.service.gov.uk/artifactory/api/pypi/pips/simple/"

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
bandit = "^1"
black = "*"
pytest = "*"
pytest-cov = "*"
safety = "*"
taskipy = "*"
version-incrementor = "0.9.0"
pre-commit = "^3"

[tool.taskipy.tasks]
bandit = "bandit -r ./hooks"
black = "black ./hooks ./tests"
cut_release = "cut-release"
prepare_release = "prepare-release"
safety = "safety check"
test = "pytest tests/ --cov=hooks -cov-config=./.coveragerc --cov-fail-under=70"
verify = "task black && task safety && task bandit && task test"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
